--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
   <head>
     <style type="text/css">
       body {
-        background: white;
+        background: blue;
         color: green;
       }
       div.container {
@@ -19,11 +19,11 @@
   </head>
   <body>
     <div class="container">
-      <h4>Welcome to PythonApp running on Docker containers inside Jenkins!!</h4>
-      <h4>We have automated Docker image creation & spinning up Containers using Jenkins!!</h4>
-      <h4>Automating using Jenkins, Docker, GitHub and Pipeline!!!!!</h4>
+      <h4>Welcome to PythonApp running on Docker containers using ECS!!</h4>
+      <h4>We have automated Docker image creation & spinning up Containers using ECS!!</h4>
+      <h4>Automating using Buildspec, Docker, GitHub and CodePipeline!!!!!</h4>
       <br>
-       <h4>Anything is Possible!!!!!</h4>
+       <h4>Anything is Possible with hardwork!!!!!</h4>
     </div>
   </body>
 </html>
