--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
   <head>
     <style type="text/css">
       body {
-        background: blue;
+        background: White;
         color: green;
       }
       div.container {
@@ -21,7 +21,7 @@
     <div class="container">
       <h4>Welcome to PythonApp running on Docker containers using ECS!!</h4>
       <h4>We have automated Docker image creation & spinning up Containers using ECS!!</h4>
-      <h4>Automating using Buildspec, Docker, GitHub and CodePipeline!!!!!</h4>
+      <h4>Automating using Buildspec, CodeBuild, ECR and CodePipeline!!!!!</h4>
       <br>
        <h4>Anything is Possible with hardwork!!!!!</h4>
     </div>
